--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 server.port=8080
 server.contextPath=/v01/quasar
+
+spring.datasource.url=${URL}
+spring.datasource.username=${USERNAME}
+spring.datasource.password=${PASSWORD}
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
